--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-globe": "^5.0.2",
+    "react-globe.gl": "^2.18.2",
     "react-scripts": "4.0.3",
+    "three": "0.119.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
